syntax="proto3";

option java_package="com.proto";
option java_outer_classname = "Scene";

message EnterSceneReq {
	int32 role_id = 1;
	int32 scene_id = 2;
}

message EnterSceneRsp {
	int32 role_id = 1;
	int32 scene_id = 2;
	int32 err_code = 3;
}
