syntax="proto3";

option java_package="com.proto";
option java_outer_classname = "Login";

//package proto;

message LoginReq {
	string account = 1;
	string pwd = 2;
	int32 conn_id = 3;
}

message LoginRsp {
	int32 err_code = 1;
}

message _RoleInfo {
	int64 role_id = 1;
	string role_name = 2;
}

message LoadRoleListRsp {
	string account = 1;
	int32 err_code = 2;
	repeated _RoleInfo role_list = 3;
}

message CreateRoleReq {
	string account = 1;
	string role_name = 2;
}

message CreateRoleRsp {
	int32 err_code = 1;
	_RoleInfo role_info = 2;
}

message EnterGame {
	int64 role_id = 1;
	string account = 2;
}

message EnterGameRsp {
	int32 err_code = 1;
	_RoleInfo role_info = 2;
}

message DisconnectReq {
	
}

message DisconnectRsp {
	string reason = 1;
}

message StartKcp {
	int32 kcp_id = 1;
	string token = 2;
}

message SwitchRemoteServer {
	int64 role_id = 1;
	string remote_ip = 2;
	int32 remote_port = 3;
	int32 remote_udp_port = 4;
	string token = 5;
}

message RemoteEnterGame {
	int64 role_id = 1;
	string token = 2;
}

